Remove Doxygen in favor of appledoc

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ Carrot-Mac.xcodeproj/project.xcworkspace/
 Carrot-Mac.xcodeproj/xcuserdata/
 Carrot-iOS.xcodeproj/project.xcworkspace/
 Carrot-iOS.xcodeproj/xcuserdata/
-doc/html/
+doc/
 build/
